--- a/docs/evaluator/style.css
+++ b/docs/evaluator/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
-    overflow: hidden;
     font-family: Arial, Helvetica, sans-serif;
+    overflow-x: scroll;
 }
 .row {
   display: flex;
