--- a/docs/style.css
+++ b/docs/style.css
@@ -35,12 +35,12 @@ body {
 
 /* Change background color of buttons on hover */
 .tab button:hover {
-  background-color: #ddd;
+  background-color: #97e6cd;
 }
 
 /* Create an active/current tablink class */
 .tab button.active {
-  background-color: #ccc;
+  background-color: #60d1ad;
 }
 
 /* Style the tab content */
@@ -60,6 +60,10 @@ body {
   border: 1px solid black;
   display: inline-block;
   margin-left: 10px;
+}
+
+h1 {
+   background-color: #97e6cd; 
 }
 
 .levelName {
